dev/cart/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart
  namespace: yas-dev
  labels:
    app: cart
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cart
  template:
    metadata:
      labels:
        app: cart
    spec:
      containers:
      - name: cart
        image: ghcr.io/nashtech-garage/yas-cart:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: 256Mi
            cpu: 100m
          limits:
            memory: 512Mi
            cpu: 500m
