dev/cart/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cart
  namespace: yas-dev
  labels:
    app: cart
spec:
  type: ClusterIP
  selector:
    app: cart
  ports:
  - port: 80
    targetPort: 80
